# Centering-Analysis-Tool

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  run_analyzer.bat  webapp.py
.github/workflows/: ci.yml
calibration/: NOTES.md  buzz_back.json  buzz_front.json  elsa_back.json  elsa_front.json  luisa_back.json  luisa_front.json  measure_crop_bias.py  merida_back.json  merida_front.json  prince_back.json  prince_front.json  reshoot_2026_07_06.json  simba_back.json  simba_front.json
card_db/: anchor_survey.py  anchors_percard.csv  anchors_report.json  fetch_images.py  index.json  update_db.py
examples/: README.md  elsa_card.json
fixtures/: README.md
src/centering/: __init__.py  back.py  borderless.py  cache.py  card_report.py  cli.py  edges.py  geometry.py  identify.py  imgio.py  locate.py  overlay.py  render_match.py  types.py  uncertainty.py
src/centering/games/: base.py  lorcana.py
tests/regression/: test_elsa_back.py  test_elsa_front.py  test_gadget_multibg.py  test_simba_card.py
tests/unit/: test_borderless_gates.py  test_edges.py  test_geometry.py  test_identify.py  test_locate.py  test_lorcana_fallback.py  test_lorcana_resolve.py  test_types.py
web/: index.html
